Revert "All in java21 (#3516)"
This reverts commit 4bb0e03ac4480cb27895765e07942b3b7c2e85f8.